templates/css/styles.css
/* ... */
.switch-field label:hover {
    cursor: pointer;
}

.switch-field input:checked + label {
    background-color: #ffa507;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.switch-field label:first-of-type {
    border-radius: 4px 0 0 4px;
}

.switch-field label:last-of-type {
    border-radius: 0 4px 4px 0;
}

.favorites_img a.btnClose_img {
    display: block;
    width: 26px;
    height: 26px;
    position: absolute;
    z-index: 100;
    right: 10px;
    top: 10px;
    background: transparent;
    color: #ccc;
}
.favorites_img a.btnClose_img:hover {
    color: #ffa507;
}
.btnUpload {
    background: #ffa507;
    /*margin: 0 auto 30px;*/
    padding: 10px 30px;
    font-size: 14.23px;
    text-transform: uppercase;
    min-width: 160px;
}
.btnUpload:hover {
    background: #000;
}
.progress-bar{
    background-color: #ffa507;
    font-weight: bold;
    font-size: 15px;
    line-height: 26px;
}
.progress{
    height: 30px;
}

/* Avatar dropdown */
.box_user_top .dropdown-toggle {
    display: inline-block;
    float: left;
}
.dropdown_avatar .dropdown-menu {
    padding: 15px;
    box-shadow: none;
    /*right: 0;*/
    top: 100%;
    left: 104px;
}
.dropdown_avatar .dropdown-menu .dropdown-item {
    color: #8c8c8c;
    display: block;
    font-size: 12px;
    padding: 5px 0;
}
.dropdown_avatar .dropdown-menu .dropdown-item:hover {
    color: #000;
    text-decoration: underline;
}
.dropdown_avatar .dropdown-menu:before {
    content: "";
    display: inline-block;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 8px 8px 8px;
    border-color: transparent transparent #ccc transparent;
    position: absolute;
    top: -8px;
    right: 0;
    left: 0;
    margin: auto;
}
.box_user_top .caret {
    position: relative;
    top: 10px;
    color: #000;
    margin-left: 5px;
}

#slider {
    -webkit-appearance: none;
    width: 100%;
    height: 15px;
    border-radius: 5px;
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
    margin-top: 10px;
}

#slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #ffa507;
    cursor: pointer;
}

#slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #ffa507;
    cursor: pointer;
}

.blur {
    -webkit-filter: blur(10px);
    -moz-filter: blur(10px);
    -o-filter: blur(10px);
    -ms-filter: blur(10px);
    filter: blur(10px);
    filter: url(blur.svg#blur);
}

label.error{
    border: none !important;
    font-size: 12px;
    color: red;
}

.ms-options-wrap > .ms-options > ul li.selected label{
    background-color: transparent;
}

#selectAvatrForm label > input{ /* HIDE RADIO */
    visibility: hidden; /* Makes input not-clickable */
    position: absolute; /* Remove input from document flow */
}
#selectAvatrForm label > input + img{ /* IMAGE STYLES */
    cursor:pointer;
    border:2px solid transparent;
}
#selectAvatrForm label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
    border:2px solid #f00;
}

